20-Apr-2016 Fixes #229. If Bam.Core.Module.ClosingPatch was applied to a container of modules, it was not applied to any of its child modules.

20-Apr-2016 ======== Version 1.0.2 beta 2 Release ========

18-Apr-2016 Fixes #228. Added Bam.Core.Module.ClosingPatch. This is a patch using the same delegate as a private patch, but is guaranteed to be executed after all other patches, i.e. so that the Module's Settings object is in its final state (i.e. just before the settings are converted to a command line or project file). Only a single closing patch is possible per module. This allows some logic on the final settings to be evaluated, such as to set a macro to be used in other TokenizedStrings (since they are expanded after patches are evaluated), or to modify a setting (e.g. add a preprocessor define based on other settings).

16-Apr-2016 Fixes #227. Added Bam.Core.PackageDirectoryRedirectAttribute, an attribute associated with an assembly, requiring a package name, an optional package version, and a redirected path. By default, the macro $(packagedir) is the directory containing the 'bam' folder. Should the source code for a package reside in a different location to that directory, this attribute can be placed anywhere in the compiled code for your packages, and the macro $(packagedir) is redirected to the specified path for that package. The redirect path can either be an absolute path, or a path relative to the directory containing the 'bam' folder. Such attributes could be placed in project specific locations, independent of package definitions. Modified the ProxyTest test package to demonstrate.
